# brainfuck

./: .gitignore  Cargo.toml  result.txt
src/: brainfuck.rs  lib.rs  main.rs  tests.rs
src/brainfuck/: tests.rs
src/tests/: lexer.rs  machine.rs  optimizer.rs  parser.rs
