[package]
name = "binter"
author = "Chr1sps"
license = "MIT"
version = "1.0.0"
edition = "2021"
about = "Brainfuck interpreter for unix based systems."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios="0.3.3"
clap = { version = "4.2.1", features = ["derive"] }
